broker-master/deployment/envoy/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
data:
  envoy.yml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address: 
        socket_address:
          address: 0.0.0.0
          port_value: 9901
    static_configs:
      listeners:
        - name: broker_frontend
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 10000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: AUTO
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/" }
                              route:
                                cluster: broker_backend

                            - match: { prefix: "/publish" }
                              route:
                                cluster: broker_backend

                            - match: { prefix: "/subscribe" }
                              route:
                                cluster: broker_backend

                            - match: { prefix: "/fetch" }
                              route:
                                cluster: broker_backend
                          cors:
                            allow_origin_string_match:
                              - prefix: "*"
                            allow_methods: GET, PUT, DELETE, POST, OPTIONS
                            allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                            max_age: "1728000"
                            expose_headers: custom-header-1,grpc-status,grpc-message
                    http_filters:
                      - name: envoy.filters.http.local_ratelimit
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                          stat_prefix: http_local_rate_limiter
                          token_bucket:
                            max_tokens: 1000
                            tokens_per_fill: 800
                            fill_interval: 1s
                          filter_enabled:
                            runtime_key: local_rate_limit_enabled
                            default_value:
                              numerator: 100
                              denominator: HUNDRED
                          filter_enforced:
                            runtime_key: local_rate_limit_enforced
                            default_value:
                              numerator: 100
                              denominator: HUNDRED
                          response_headers_to_add:
                            - header:
                                key: x-local-rate-limit
                                value: 'true'
                          local_rate_limit_per_downstream_connection: false
                      - name: envoy.filters.http.grpc_web
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                      - name: envoy.filters.http.cors
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: broker_backend
          connect_timeout: 0.25s
          type: LOGICAL_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          load_assignment:
            cluster_name: broker_backend
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: therealbroker.default.svc.cluster.local
                          port_value: 8080
