broker-master/deployment/envoy/envoy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  envoy
  namespace: default
spec:
  selector:
    app:  envoy
  type:  NodePort
  ports:
  - port:  10000
    targetPort:  10000
    nodePort: 30004
    name: http
  - port: 9901
    targetPort: 9901
    nodePort: 30005
    name: admin
