broker-master/deployment/envoy/envoy-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: envoy
  namespace: default
spec:
  selector:
    matchLabels:
      app: envoy
  serviceName: "envoy"
  replicas: 1
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: docker.arvancloud.ir/envoyproxy/envoy:v1.19.1
        ports:
        - containerPort: 10000
        - containerPort: 9901
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy/envoy.yml
          subPath: envoy.yml
        command: ["envoy", "-c", "/etc/envoy/envoy.yaml", "--service-cluster", "envoy"]
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
